# art-gallery-placements

./: CMakeLists.txt  README.md
input/: input.txt
src/: gallery.cpp  gallery.h  gallery_manager.cpp  gallery_manager.h  main.cpp
